--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@
 
 # Ignore compiled Python files
 *.pyc
-*/__pycache__/
+__pycache__/
 
 # Ignore local settings
 /local_settings.py
@@ -29,3 +29,6 @@
 
 # Ignore environment variables file
 .env
+
+# Ignore migrations
+migrations/
